tests/paczka2/big_fuzzy/97865313.err
Error in line 9: gXRc S511 61,3
Error in line 2: Wd9 S351 89,0
Error in line 22: 18Rk4So S511 24,0
Error in line 16: q06AjR S351 61,0
Error in line 27: q06AjR S815 13,8
Error in line 35: dcrrCihz6bH S815 28,5
Error in line 36: dcrrCihz6bH A743 24,8
Error in line 28: q06AjR A743 8,8
Error in line 54: zZEhXecE S815 49,2
Error in line 62: q06AjR S815 54,8
Error in line 63: q06AjR S511 46,1
Error in line 65: q06AjR S815 3,8
Error in line 53: A743 S511 194,1
Error in line 88: A743 S815 13,2
Error in line 102: Wd9 S815 150,1
Error in line 82: q06AjR S511 1,1
Error in line 103: Wd9 A743 23,2
Error in line 105: gXRc A743 17,9
Error in line 132: dcrrCihz6bH S351 89,3
Error in line 161: 18Rk4So S511 -4,9
Error in line 160: 18Rk4So S511 77,4
Error in line 170: gXRc S351 160,6
Error in line 176: 18Rk4So S351 48,0
Error in line 178: A743 S815 86,9
Error in line 185: zZEhXecE S351 80,4
Error in line 187: A743 S511 67,0
Error in line 200: zZEhXecE S351 82,5
Error in line 210: 18Rk4So S815 66,5
Error in line 223: gXRc S815 75,7
Error in line 231: zZEhXecE S511 20,7
Error in line 233: dcrrCihz6bH S815 82,5
Error in line 236: A743 S815 23,6
